src/Test/Fixtures/Bad/BitQubit/missingClosingParenInMeasrBitDeclaration.lf
let b : bit = measr(q